# worker_app

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vix.json  worker_app.vix
examples/: basic_worker.cpp  retry_worker.cpp  scheduled_tasks.cpp
include/worker_app/: worker_app.hpp
tests/: test_basic.cpp
